--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Donate Bangladesh</title>
   <!-- Google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,11 +34,11 @@
 </script>
 </head>
 <body class="font-lexend">
-  <header class="container mx-auto ">
+  <header class="container mx-auto sticky top-0 z-10 backdrop-blur">
     <!-- navbar -->
     <div class="navbar bg-navClr px-2 lg:px-20 py-10 ">
       <div class="navbar-start">
-        <button class="btn bg-primary text-black px-3 lg:px-10 hover:bg-primary border-none text-xl">Blog</button> 
+        <a href="./home.html"> <button class="btn bg-primary text-black px-3 lg:px-10 hover:bg-primary border-none text-xl">Blog</button></a>
       </div>
       <div class="navbar-center lg:space-x-5">
         <img class="hidden lg:block" src="./assets/logo.png" alt="">
