added the js file

--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
       </div>    
   </header>
 
-  <main class="container mx-auto mt-20">
+  <main class="container mx-auto mt-20 px-2 lg:px-20">
 
       <h1 class="text-5xl font-bold">Important FAQ ?</h1>
 
